--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
   "devDependencies": {
     "@heroicons/vue": "^1.0.5",
     "@tailwindcss/forms": "^0.3.4",
+    "@types/workbox-core": "^4.3.1",
+    "@types/workbox-precaching": "^4.3.1",
+    "@types/workbox-routing": "^4.3.1",
+    "@types/workbox-window": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
     "@vitejs/plugin-vue": "^1.9.3",
@@ -29,6 +33,11 @@
     "typescript": "^4.4.3",
     "vite": "^2.6.4",
     "vite-plugin-eslint": "^1.3.0",
-    "vue-tsc": "^0.3.0"
+    "vite-plugin-pwa": "^0.11.8",
+    "vue-tsc": "^0.3.0",
+    "workbox-core": "^6.4.1",
+    "workbox-precaching": "^6.4.1",
+    "workbox-routing": "^6.4.1",
+    "workbox-window": "^6.4.1"
   }
 }
