--- a/package.json
+++ b/package.json
@@ -9,36 +9,40 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@vue/apollo-composable": "^4.0.0-alpha.19",
+    "firebase": "^9.9.4",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "vue": "^3.2.16",
-    "vue-router": "^4.0.12"
+    "vue": "^3.2.38",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@heroicons/vue": "^1.0.5",
-    "@tailwindcss/forms": "^0.3.4",
+    "@heroicons/vue": "^2.0.10",
+    "@rushstack/eslint-patch": "^1.1.4",
+    "@tailwindcss/forms": "^0.5.3",
     "@types/workbox-core": "^4.3.1",
     "@types/workbox-precaching": "^4.3.1",
     "@types/workbox-routing": "^4.3.1",
     "@types/workbox-window": "^4.3.4",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "autoprefixer": "^10.4.0",
-    "daisyui": "^1.16.2",
-    "eslint": "^8.3.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-vue": "^8.1.1",
-    "postcss": "^8.4.1",
-    "prettier": "^2.4.1",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.4.3",
-    "vite": "^2.6.4",
-    "vite-plugin-eslint": "^1.3.0",
-    "vite-plugin-pwa": "^0.11.8",
-    "vue-tsc": "^0.3.0",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "@vitejs/plugin-vue-jsx": "^2.0.1",
+    "@vue/eslint-config-prettier": "^7.0.0",
+    "@vue/eslint-config-typescript": "^11.0.1",
+    "@vue/tsconfig": "^0.1.3",
+    "autoprefixer": "^10.4.8",
+    "daisyui": "^2.25.0",
+    "eslint": "8.22.0",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "eslint-plugin-vue": "^9.4.0",
+    "postcss": "^8.4.16",
+    "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
+    "typescript": "4.5.5",
+    "vite": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-pwa": "^0.12.7",
+    "vue-tsc": "^0.40.10",
     "workbox-core": "^6.4.1",
     "workbox-precaching": "^6.4.1",
     "workbox-routing": "^6.4.1",
